--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
   
 
 
-<script type="text/javascript" src="https://korosten.pp.ua/script.js">
+<script type="text/javascript">_at_config = ["__page__","AIzaSyCF97XfLoejM9NhWDAZeOcjC6kOEsEmv6A","897606708560-a63d8ia0t9dhtpdt4i3djab2m42see7o.apps.googleusercontent.com","application/vnd.google-apps.drive-sdk","application/google-sites-page","v2","https://www.googleapis.com","v1",null,null,null,null,"0","https://content.googleapis.com","SITES_%s",null,null,null,0,0,0,null,null,"https://accounts.google.com/ServiceLogin?passive\u003d1209600\u0026continue\u003dhttps://sites.google.com/view/korhotel/%25D1%2583%25D0%25BA%25D1%2580%25D0%25B0%25D1%2597%25D0%25BD%25D1%2581%25D1%258C%25D0%25BA%25D0%25B0\u0026followup\u003dhttps://sites.google.com/view/korhotel/%25D1%2583%25D0%25BA%25D1%2580%25D0%25B0%25D1%2597%25D0%25BD%25D1%2581%25D1%258C%25D0%25BA%25D0%25B0",["AHKXmL2osN2U0HrN5RlFEjweLfAXC3HMqUIGlfTxmMWsLZ4wFcxpQ4O3OuKl6J1ieTLNyevCzQyC",1,"CPjYif7P8d4CFdSmNwodBgAOeg",1543220400123000,[14100598,14100043,14100173,14100758,14100166,14100064,14100178,14100049,14100606,14100179,14100706,14100750,14100746,14100754,14100246,14100742,14100686,14100184,14100630,14100774,14100622,14100894,14100762,14100802,14100806,14100770,14100174,14100151,14100730,14100170,14100702,14100626,14100031,14100822,14100155,14100278,14100674,14100406,14100810,14100646,14100698,14100141]
+]
+,"AHL0AtIdq39DIgEOToWUCV8ALmcSgAbzqQ:1543220400039","103924801324952098795",null,null,0,null,null,null,null,null,"atari_2018.46-Tue-0300_RC01",null,null,null,"https://drive.google.com",null,null,null,0,null,null,1,1,null,0,1,null,null,null,null,null,null,null,null,null,null,0,null,1,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,0,"v2internal","https://docs.google.com",null,null,null,null,null,0,"https://sites.google.com/new/?authuser\u003d0",null,null,null,null,null,0,null,null,null,null,null,null,null,null,null,null,null,null,null,null,1,null,null,0,null,null,null,1,"",null,null,"/_/sharing/share",null,1,null,null,null,null,null,null,1,5,null,null,"https://accounts.google.com/o/oauth2/auth","https://accounts.google.com/o/oauth2/postmessageRelay",0,null,null,1,78,"https://sites.google.com/new/?authuser\u003d0\u0026usp\u003dviewer_footer\u0026authuser\u003d0",1,1,null,null,0,null,1,null,null,"Firefox",62,0,null,null,null,null,[]
+,null,null,null,null,null,null,null,null,0,0,null,1,null,null,0,null,null,0,null,1,null,null,null,null,0,null,null,null,null,0,null,null,null,null,0,null,"https://www.gstatic.com/atari/embeds/cba9f72911d06d09292c908bf4a68127/intermediate-frame-minified.html",0,null,"v2beta",null,null,"AIzaSyCbxzu1Qmnvwf1JyA3KnMfGMJUEtVaxHRg",null,null,null,4,"https://accounts.google.com/o/oauth2/iframe",null,null,null,null,null,null,"https://987388054-sites-embeds.googleusercontent.com/s/embeds/code/inner-frame-minified.html",null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,"https://support.google.com/sites/",null,null,0,null,null,null,null,null,null,null,null,null,null,null,1,1,null,1,1,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,1543220400128,null,1,null,null,1,0,null,0,0,0,null,1,1,null,null,null,1,null,null,"221513920",1,0,0,1000,1,"https://sites.google.com/view/korhotel/%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B0",0,0,null,0,0,0,0,1,0,0,0,"",0,0,0,0,0]
+; window.globals = {"enableAnalytics":true,"webPropertyId":"","showDebug":false,"hashedSiteId":"fe66d3f9d62d18a1995f1354608731b35433d3f8f5535e8a11ebf344bfa030dd","normalizedPath":"view/korhotel/українська","pageTitle":"Українська"}; function gapiLoaded() {if (globals.gapiLoaded == undefined) {globals.gapiLoaded = true;} else {globals.gapiLoaded();}}window.messages = []; window.addEventListener && window.addEventListener('message', function(e) {if (window.messages && e.data && e.data.magic == 'SHIC') {window.messages.push(e);}});</script><script src="https://apis.google.com/js/client.js?onload=gapiLoaded"></script><script type="text/javascript">document.createElement('content');(function(){/*
+ Copyright (c) Microsoft Corporation. All rights reserved.
+ Licensed under the Apache License, Version 2.0 (the "License"); you may not use
+ this file except in compliance with the License. You may obtain a copy of the
+ License at http://www.apache.org/licenses/LICENSE-2.0
 
+ THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION ANY IMPLIED
+ WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A PARTICULAR PURPOSE,
+ MERCHANTABLITY OR NON-INFRINGEMENT.
+
+ See the Apache Version 2.0 License for specific language governing permissions
+ and limitations under the License.
+*/
+}).call(this);
 </script>
 
 
