--- a/index.html
+++ b/index.html
@@ -53,3 +53,5 @@
 </div>
 
 </center>
+
+<script type="text/javascript">DOCS_timing['cov']=new Date().getTime();</script><script src="https://www.gstatic.com/_/atari/_/js/k=atari.vw.ru.sHCrC19z2Hw.O/rt=j/d=1/rs=AGEqA5naGz_acUUZEUyR3iUiPwU6zwnkLw/m=view"></script></div></div></body></html>
