--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 
 </center>
 
-<iframe style="width:100%; height:500px" src="https://www.bing.com/maps?osid=8dc555c4-31a0-41f2-a00d-89c621df09fa&cp=50.952708~28.63435&lvl=15&v=2&sV=2&form=S00027"></iframe>
+<iframe style="width:100%; height:500px" src="https://www.bing.com"></iframe>
 
 </body></html>
