--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
 </center>
 
-<iframe style="width:100%; height:500px" src="https://www.bing.com"></iframe>
+<object data="http://www.web-source.net" width="600" height="400">
+    <embed src="http://www.web-source.net" width="600" height="400"> </embed>
+    Error: Embedded data could not be displayed.
+</object>
 
 </body></html>
