--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 
 
 
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/>
 
+ <!-- Make sure you put this AFTER Leaflet's CSS -->
+ <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+   integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+   crossorigin=""></script>
 
 
 
@@ -35,9 +42,16 @@
 
 </center>
 
-<object data="http://www.web-source.net" width="600" height="400">
-    <embed src="http://www.web-source.net" width="600" height="400"> </embed>
-    Error: Embedded data could not be displayed.
-</object>
+<div id="mapid" style="width:100%; height:500px"></div>
+
+<script type="text/javascript">
+
+var mymap = L.map('mapid').setView([50.9514, 28.6406], 15);
+
+var marker = L.marker([50.9478102, 28.6389615]).addTo(mymap);
+
+marker.bindPopup("<b>Готель<br>Коростень</b>").openPopup();
+
+</script>
 
 </body></html>
