--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 
 var mymap = L.map('mapid').setView([50.9514, 28.6406], 15);
 
+L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		id: 'mapbox.streets'
+	}).addTo(mymap);
+
 var marker = L.marker([50.9478102, 28.6389615]).addTo(mymap);
 
 marker.bindPopup("<b>Готель<br>Коростень</b>").openPopup();
