--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 
 </center>
 
-<iframe src="https://korosten.pp.ua/map.html" style="width:100%; height:500px"></iframe>
+<iframe src="https://korosten.pp.ua/map.html" style="width:100%; height:700px" scrolling="no"></iframe>
 
 </body></html>
