--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 </center>
 
-  
-<iframe src="https://korosten.pp.ua/map.html" style="width:100%; height:500px" scrolling="no"></iframe>
+  <center>
+<iframe src="https://korosten.pp.ua/map.html" style="width:80%; height:500px" scrolling="no"></iframe>
+  </center>
 
 </body></html>
