--- a/index.html
+++ b/index.html
@@ -42,4 +42,13 @@
 </center>
 
 </div>
+  
+  <script type="text/javascript">
+    
+    $(document).ready(function(){
+    $(this).scrollTop(0);
+});
+    
+  </script>
+  
 </body></html>
