--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ function detectIE() {
 @font-face {
 font-family: "Calligraph";
 src:
-url("fonts/Calligraph.TTF"), format("truetype");
-url("fonts/Calligraph.svg"), format("svg");
-url("fonts/Calligraph.woff"), format("woff");
-url("fonts/Calligraph.eot"), format("eot");
+url("fonts/Calligraph.TTF"), format('truetype');
+url("fonts/Calligraph.svg"), format('svg');
+url("fonts/Calligraph.woff"), format('woff');
+url("fonts/Calligraph.eot"), format('eot');
 }
 #websitetitle{
 font-family: 'Calligraph', Calibri, sans-serif;
