--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function detectIE() {
 font-family: "Calligraph";
 src:
 url("fonts/Calligraph.TTF"), format('truetype');
-url("fonts/Calligraph.svg"), format('svg');
+url("fonts/Calligraph.svg#Calligraph"), format('svg');
 url("fonts/Calligraph.woff"), format('woff');
 url("fonts/Calligraph.eot"), format('eot');
 }
