--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@ url("fonts/Calligraph.woff"), format('woff');
 url("fonts/Calligraph.eot"), format('eot');
 }
 #websitetitle{
-font-family: 'Calligraph', Calibri, sans-serif;
+font-family: 'Calligraph';
 font-weight:normal;
 font-style:normal;
 color: white;
 font-size:65px;
 }
 #websitetitlesmall{
-font-family: 'Calligraph', Calibri, sans-serif;
+font-family: 'Calligraph';
 font-weight:normal;
 font-style:normal;
 color: white;
