--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@ function detectIE() {
 <td id="rightdecoration" style="background-color: rgba(31,73,125,1); text-align:center; font-size:23px; font-family:Calibri; color:white; background-image:url('patterns/3.png');background-repeat:no-repeat;background-position:top right; background-size:45%;">
 <style>
 @font-face {
-font-family: "Calligraph";
-src:
-url("fonts/Calligraph.TTF"), format('truetype');
-url("fonts/Calligraph.svg#Calligraph"), format('svg');
-url("fonts/Calligraph.woff"), format('woff');
-url("fonts/Calligraph.eot"), format('eot');
+  font-family: 'Calligraph';
+src: local('Calligraph'), url("fonts/Calligraph.eot"), url("fonts/Calligraph.ttf"), 
+
+url("fonts/Calligraph.woff"), url("fonts/Calligraph.svg");
 }
 #websitetitle{
 font-family: 'Calligraph';
