--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ src: local('Calligraph'), url("fonts/Calligraph.eot"), url("fonts/Calligraph.ttf
 url("fonts/Calligraph.woff"), url("fonts/Calligraph.svg");
 }
 #websitetitle{
-font-family: 'Calligraph';
+font-family: Calligraph;
 font-weight:normal;
 font-style:normal;
 color: white;
 font-size:65px;
 }
 #websitetitlesmall{
-font-family: 'Calligraph';
+font-family: Calligraph;
 font-weight:normal;
 font-style:normal;
 color: white;
