--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function detectIE() {
   font-family: 'Calligraph';
 src: local('Calligraph'), url("fonts/Calligraph.ttf"), url("fonts/Calligraph.eot"), 
 
-url("fonts/Calligraph.woff"), url("fonts/Calligraph.svg");
+url("fonts/Calligraph.woff"), url("fonts/Calligraph.svg#Calligraph");
 }
 #websitetitle{
 font-family: Calligraph;
