--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function detectIE() {
 <style>
 @font-face {
   font-family: 'Calligraph';
-src: local('Calligraph'), url("fonts/Calligraph.ttf"), url("fonts/Calligraph.eot"), 
+src: url("fonts/Calligraph.ttf"), url("fonts/Calligraph.eot"), 
 
 url("fonts/Calligraph.woff"), url("fonts/Calligraph.svg#Calligraph");
 }
