--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@ function detectIE() {
 font-family: "Calligraph";
 
 src:
-url("fonts/Calligraph.ttf"), format("ttf");
-url("fonts/Calligraph.svg"), format("svg");
+url("fonts/Calligraph.ttf"), format("truetype");
+url("fonts/Calligraph.svg#Calligraph"), format("svg");
 url("fonts/Calligraph.woff"), format("woff");
 url("fonts/Calligraph.eot"), format("eot");
 }
 #websitetitle{
-font-family: "Calligraph";
+font-family: 'Calligraph';
 font-weight:normal;
 font-style:normal;
 color: white;
 font-size:65px;
 }
 #websitetitlesmall{
-font-family: "Calligraph";
+font-family: 'Calligraph';
 font-weight:normal;
 font-style:normal;
 color: white;
