--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function detectIE() {
 <td id="rightdecoration" style="background-color: rgba(31,73,125,1); text-align:center; font-size:23px; font-family:Calibri; color:white; background-image:url('patterns/3.png');background-repeat:no-repeat;background-position:top right; background-size:45%;">
 <style>
 @font-face {
-font-family: "Calligraph";
+font-family: 'Calligraph';
 
 src:
 url("fonts/Calligraph.ttf"), format("truetype");
