--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ function detectIE() {
 font-family: 'Calligraph';
 
 src:
-url("fonts/Calligraph.ttf"), format("truetype");
-url("fonts/Calligraph.svg#Calligraph"), format("svg");
-url("fonts/Calligraph.woff"), format("woff");
-url("fonts/Calligraph.eot"), format("eot");
+url("fonts/Calligraph.ttf"), 
+url("fonts/Calligraph.svg#Calligraph"), 
+url("fonts/Calligraph.woff"), 
+url("fonts/Calligraph.eot");
 }
 #websitetitle{
 font-family: 'Calligraph';
