--- a/index.html
+++ b/index.html
@@ -65,23 +65,22 @@ function detectIE() {
 <td id="rightdecoration" style="background-color: rgba(31,73,125,1); text-align:center; font-size:23px; font-family:Calibri; color:white; background-image:url('patterns/3.png');background-repeat:no-repeat;background-position:top right; background-size:45%;">
 <style>
 @font-face {
-font-family: 'Calligraph';
+font-family: Calligraph;
 
 src:
-url("fonts/Calligraph.ttf"), 
-url("fonts/Calligraph.svg#Calligraph"), 
-url("fonts/Calligraph.woff"), 
-url("fonts/Calligraph.eot");
+url("fonts/Calligraph.ttf"), format("ttf");
+url("fonts/Calligraph.woff"), format("woff");
+url("fonts/Calligraph.eot"), format("eot");
 }
 #websitetitle{
-font-family: 'Calligraph';
+font-family: Calligraph;
 font-weight:normal;
 font-style:normal;
 color: white;
 font-size:65px;
 }
 #websitetitlesmall{
-font-family: 'Calligraph';
+font-family: Calligraph;
 font-weight:normal;
 font-style:normal;
 color: white;
