--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function detectIE() {
 font-family: Calligraph;
 
 src:
-url("fonts/Calligraph.ttf"), format("ttf");
+url("fonts/Calligraph.ttf"), format("truetype");
 url("fonts/Calligraph.woff"), format("woff");
 url("fonts/Calligraph.eot"), format("eot");
 }
