--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function detectIE() {
 <td id="rightdecoration" style="background-color: rgba(31,73,125,1); text-align:center; font-size:23px; font-family:Calibri; color:white; background-image:url('patterns/3.png');background-repeat:no-repeat;background-position:top right; background-size:45%;">
 <style>
 @font-face {
-font-family: "CalligraphFont";
+font-family: "Calligraph_Font";
 
 src:
 url("fonts/Calligraph.ttf"), format("truetype");
@@ -73,12 +73,12 @@ url("fonts/Calligraph.woff"), format("woff");
 url("fonts/Calligraph.eot"), format("eot");
 }
 #websitetitle{
-font-family: "CalligraphFont";
+font-family: "Calligraph_Font";
 color: white;
 font-size:65px;
 }
 #websitetitlesmall{
-font-family: "CalligraphFont";
+font-family: "Calligraph_Font";
 color: white;
 font-size:50px;
 }
