--- a/index.html
+++ b/index.html
@@ -65,20 +65,23 @@ function detectIE() {
 <td id="rightdecoration" style="background-color: rgba(31,73,125,1); text-align:center; font-size:23px; font-family:Calibri; color:white; background-image:url('patterns/3.png');background-repeat:no-repeat;background-position:top right; background-size:45%;">
 <style>
 @font-face {
-font-family: "Calligraph_Font";
+font-family: "CalligraphF";
 
 src:
 url("fonts/Calligraph.ttf"), format("truetype");
 url("fonts/Calligraph.woff"), format("woff");
 url("fonts/Calligraph.eot"), format("eot");
+        
+font-weight:normal;
+font-style:normal;        
 }
 #websitetitle{
-font-family: "Calligraph_Font";
+font-family: "CalligraphF";
 color: white;
 font-size:65px;
 }
 #websitetitlesmall{
-font-family: "Calligraph_Font";
+font-family: "CalligraphF";
 color: white;
 font-size:50px;
 }
