--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function detectIE() {
 @font-face {
 font-family: 'CalligraphF';
 
-src: local('CalligraphF'), url("fonts/CalligraphF.eot"), url("fonts/CalligraphF.ttf"), url("fonts/CalligraphF.woff"), url("fonts/CalligraphF.svg#Calligraph");
+src: local('CalligraphF'), url("fonts/Calligraph.eot"), url("fonts/Calligraph.ttf"), url("fonts/Calligraph.woff"), url("fonts/Calligraph.svg#Calligraph");
         
 font-weight:normal;
 font-style:normal;        
