--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function detectIE() {
 @font-face {
 font-family: 'CalligraphF';
 
-src: local('CalligraphF'), url("https://korosten.pp.ua/fonts/Calligraph.eot"), url("https://korosten.pp.ua/fonts/Calligraph.ttf"), url("https://korosten.pp.ua/fonts/Calligraph.woff"), url("https://korosten.pp.ua/fonts/Calligraph.svg#Calligraph");
+src: local('CalligraphF'), url("https://korosten.pp.ua/fonts/Calligraph.eot"), url("https://korosten.pp.ua/fonts/Calligraph.otf"), url("https://korosten.pp.ua/fonts/Calligraph.ttf"), url("https://korosten.pp.ua/fonts/Calligraph.woff"), url("https://korosten.pp.ua/fonts/Calligraph.svg#Calligraph");
                
 }
 #websitetitle{
