--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ function detectIE() {
 <td id="rightdecoration" style="background-color: rgba(31,73,125,1); text-align:center; font-size:23px; font-family:Calibri; color:white; background-image:url('patterns/3.png');background-repeat:no-repeat;background-position:top right; background-size:45%;">
 <style>
 @font-face {
-font-family: 'CalligraphF';
+font-family: 'Calligraph';
 
-src: local('CalligraphF'), url("https://korosten.pp.ua/fonts/Calligraph.eot"), url("https://korosten.pp.ua/fonts/Calligraph.otf"), url("https://korosten.pp.ua/fonts/Calligraph.ttf"), url("https://korosten.pp.ua/fonts/Calligraph.woff"), url("https://korosten.pp.ua/fonts/Calligraph.svg#Calligraph");
+src: local('Calligraph'), url("https://korosten.pp.ua/fonts/Calligraph.eot"), url("https://korosten.pp.ua/fonts/Calligraph.otf"), url("https://korosten.pp.ua/fonts/Calligraph.ttf"), url("https://korosten.pp.ua/fonts/Calligraph.woff"), url("https://korosten.pp.ua/fonts/Calligraph.svg#Calligraph");
                
 }
 #websitetitle{
