--- a/test.html
+++ b/test.html
@@ -365,7 +365,7 @@ elemphotogallerylink.innerText="Фотогалерея";
 </div></div></div></div></div>
 <div style="background-color: rgba(31,73,125,1); color: white;  width:100%; padding-left:25px; padding-bottom: 0px; ">
 
-<div>
+<div style="position:relative; float:left;">
         <!-- Top100 (Kraken) Widget -->
 <span id="top100_widget"></span>
 <!-- END Top100 (Kraken) Widget -->
