--- a/test.html
+++ b/test.html
@@ -211,6 +211,7 @@ var elemphotogallerylink = document.getElementById("photogallerylink");
 var elemrightdecoration = document.getElementById("rightdecoration");
 var elemrightdecorationholder = document.getElementById("rightdecorationholder");
 var elemtopdecoration = document.getElementById("topdecoration");
+var elemcounter = document.getElementById("counter");
 if(document.documentElement.clientWidth>1200){
 elemwebsitetitle.style.fontSize = "65px";
 elemtopdecoration.style.display="block";
@@ -219,6 +220,7 @@ elemleftimg.style.width="100%";
 elemleftcol.style.width="55%";
 elemrightdecorationholder.style.width="30%";
 elemrightdecoration.style.backgroundSize="250px";
+elemcounter.style.width="80px";
 if(document.documentElement.clientWidth>1300){
 elemrightdecoration.style.backgroundSize="300px";
 }
@@ -233,6 +235,7 @@ elemleftcol.style.width="55%";
 elemrightdecorationholder.style.width="30%";
 elemtopdecoration.style.display="block";
 elemweatherlink.style.display="inline";
+elemcounter.style.width="80px";
 }
 else
 {
@@ -244,6 +247,7 @@ elemrightdecorationholder.style.width="11%";
 elemrightdecoration.style.backgroundImage="url('patterns/31.png')";
 elemrightdecoration.style.backgroundSize="250px";
 elemtopdecoration.style.display="none";
+elemcounter.style.width="0px";
 if(document.documentElement.clientWidth>650){
 elemweatherlink.style.display="inline";
 }
@@ -365,7 +369,7 @@ elemphotogallerylink.innerText="Фотогалерея";
 </div></div></div></div></div>
 <div style="background-color: rgba(31,73,125,1); color: white;  width:100%; padding-left:25px; padding-bottom: 0px; ">
 
-<div style="position:relative; float:left; width:80px; padding-top:41px;">
+<div id="counter" style="position:relative; float:left; width:80px; padding-top:41px;">
 
 <!-- Top100 (Kraken) Widget -->
 <span id="top100_widget"></span>
