--- a/test.html
+++ b/test.html
@@ -211,7 +211,7 @@ var elemphotogallerylink = document.getElementById("photogallerylink");
 var elemrightdecoration = document.getElementById("rightdecoration");
 var elemrightdecorationholder = document.getElementById("rightdecorationholder");
 var elemtopdecoration = document.getElementById("topdecoration");
-var elemcounter = document.getElementById("counter");
+var elemcounter = document.getElementById("counterwidget");
 if(document.documentElement.clientWidth>1200){
 elemwebsitetitle.style.fontSize = "65px";
 elemtopdecoration.style.display="block";
@@ -369,7 +369,7 @@ elemphotogallerylink.innerText="Фотогалерея";
 </div></div></div></div></div>
 <div style="background-color: rgba(31,73,125,1); color: white;  width:100%; padding-left:25px; padding-bottom: 0px; ">
 
-<div id="counter" style="position:relative; float:left; width:80px; padding-top:35px;">
+<div id="counterwidget" style="position:relative; float:left; width:80px; padding-top:35px;">
 
 <!-- Top100 (Kraken) Widget -->
 <span id="top100_widget"></span>
