--- a/test.html
+++ b/test.html
@@ -1,1 +1,17 @@
+<!-- HotLog -->
+<span id="hotlog_counter"></span>
+<span id="hotlog_dyn"></span>
+<script type="text/javascript">
+    var hot_s = document.createElement('script'); hot_s.type = 'text/javascript'; hot_s.async = true;
+    hot_s.src = 'http://js.hotlog.ru/dcounter/2583189.js';
+    hot_d = document.getElementById('hotlog_dyn');
+    hot_d.appendChild(hot_s);
+</script>
 
+<noscript>
+<a href="" target="_blank">
+<img src="http://hit5.hotlog.ru/cgi-bin/hotlog/count?s=2583189&im=71"
+border="0"  alt="HotLog" title="HotLog">
+</a>
+</noscript>
+<!-- /HotLog -->
