--- a/test.html
+++ b/test.html
@@ -401,7 +401,7 @@ elemphotogallerylink.innerText="Фотогалерея";
 <!-- END Top100 (Kraken) Counter -->
 
 <!-- HotLog -->
-<span id="hotlog_counter"><a href="https://click.hotlog.ru/?2583189" target="_blank"><img src="https://hit5.hotlog.ru/cgi-bin/hotlog/count?0.055021379276603666&amp;s=2583189&amp;im=71&amp;r=&amp;pg=https%3A//korosten.pp.ua/test.html&amp;j=N&amp;wh=1366x768&amp;px=24&amp;cver=1&amp;js=1.3" class="hotlog_counter" border="0" alt="HotLog" title="HotLog" width="1" height="1"></a></span>
+<span id="hotlog_counter1"><a href="https://click.hotlog.ru/?2583189" target="_blank"><img src="https://hit5.hotlog.ru/cgi-bin/hotlog/count?0.055021379276603666&amp;s=2583189&amp;im=71&amp;r=&amp;pg=https%3A//korosten.pp.ua/test.html&amp;j=N&amp;wh=1366x768&amp;px=24&amp;cver=1&amp;js=1.3" class="hotlog_counter" border="0" alt="HotLog" title="HotLog" width="1" height="1"></a></span>
 <span id="hotlog_dyn"></span>
 <script type="text/javascript">
 var hot_s = document.createElement('script');
