--- a/index.html
+++ b/index.html
@@ -399,4 +399,28 @@ elemphotogallerylink.innerText="Фотогалерея";
   <img src="//counter.rambler.ru/top100.cnt?pid=6851097" alt="Топ-100" />
 </noscript>
 <!-- END Top100 (Kraken) Counter -->
+<div style="display:none;">        
+        
+<!-- hit.ua -->
+<a href='https://hit.ua/?x=50788' target='_blank'>
+<script language="javascript" type="text/javascript"><!--
+Cd=document;Cr="&"+Math.random();Cp="&s=1";
+Cd.cookie="b=b";if(Cd.cookie)Cp+="&c=1";
+Cp+="&t="+(new Date()).getTimezoneOffset();
+if(self!=top)Cp+="&f=1";
+//--></script>
+<script language="javascript1.1" type="text/javascript"><!--
+if(navigator.javaEnabled())Cp+="&j=1";
+//--></script>
+<script language="javascript1.2" type="text/javascript"><!--
+if(typeof(screen)!='undefined')Cp+="&w="+screen.width+"&h="+
+screen.height+"&d="+(screen.colorDepth?screen.colorDepth:screen.pixelDepth);
+//--></script>
+<script language="javascript" type="text/javascript"><!--
+Cd.write("<img src='//c.hit.ua/hit?i=50788&g=0&x=2"+Cp+Cr+
+"&r="+escape(Cd.referrer)+"&u="+escape(window.location.href)+
+"' border='0' wi"+"dth='1' he"+"ight='1'/>");
+//--></script></a>
+<!-- / hit.ua -->
+</div>
 </body></html>
